# india-cashflow-os

./: .gitignore  .vercelignore  README.md  codebase_audit_report.md  compose.local.yml  create_sqlite_repo.py  newplan.md  package-lock.json  package.json  prd.md  render.yaml  requirements.txt  vercel.json
apps/api/: .env.example  alembic.ini  index.py  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_cashflow_schema.py  0002_drop_deprecated_sync_tables.py
apps/api/data/: cashflow.db
apps/api/data/reports/: 3225b3b0-4034-4833-be8b-072883d8c24e.xlsx  46a8b703-2463-4938-a90b-781d2d53f12a.xlsx  4b1b4080-9906-4002-87b2-6804854aac2e.xlsx  709316df-0f60-4156-a053-320f17fc0ca7.xlsx  bddc2491-2a35-47be-9c08-5f8ecf7babb2.xlsx
apps/api/src/: broken.py
apps/api/src/cashflow_os/: __init__.py
apps/api/src/cashflow_os/api/: __init__.py  auth.py  blob_storage.py  main.py  schemas.py  store.py
apps/api/src/cashflow_os/db/: __init__.py  engine.py  repository.py
apps/api/src/cashflow_os/domain/: __init__.py  models.py
apps/api/src/cashflow_os/forecast/: __init__.py  engine.py
apps/api/src/cashflow_os/ingestion/: __init__.py  errors.py  manual_template.py  service.py  tally.py  zoho.py  (+1 more)
apps/api/src/cashflow_os_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/tests/: test_api.py  test_forecast_engine.py  test_golden_dataset.py  test_ingestion.py  test_local_smoke.py  test_money_precision.py  test_reporting.py  test_rules_engine.py  test_sparklines.py  test_store.py  test_zoho_contacts.py
(+70 files in other folders)
