[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cashflow-os-api"
version = "0.1.0"
description = "India Cashflow OS backend"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.121.0",
  "uvicorn>=0.38.0",
  "pydantic>=2.12.0",
  "openpyxl>=3.1.0",
  "xlsxwriter>=3.2.0",
  "reportlab>=4.4.0",
  "sqlalchemy>=2.0.35",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
